# bigquery-frame

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  AUTH.md  README.md  README_DOCS.md  RELEASE.md  conf.py  demo.py  mkdocs.yml  nose2.cfg  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: build_and_validate.yml  release.yml
bigquery_frame/: __init__.py  auth.py  bigquery_builder.py  bigquery_client.py  column.py  conf.py  data_type_utils.py  dataframe.py  dataframe_writer.py  exceptions.py  field_utils.py  functions.py  graph.py  grouped_data.py  has_bigquery_client.py  nested.py  print_utils.py  printing.py  special_characters.py  temp_names.py  transformations.py  units.py  utils.py
bigquery_frame/cli/: diff.py
bigquery_frame/data_diff/: __init__.py  compare_dataframes_impl.py  dataframe_comparator.py  diff_format_options.py  diff_per_col.py  diff_result.py  diff_result_analyzer.py  diff_result_summary.py  diff_results.py  diff_stats.py  export.py  package.py  schema_diff.py
bigquery_frame/examples/: reference_nested.py
bigquery_frame/fp/: README.md  __init__.py  higher_order.py  package.py  printable_function.py
bigquery_frame/graph_impl/: connected_components.py
bigquery_frame/nested_impl/: fields.py  package.py  print_schema.py  schema_string.py  select_impl.py  unnest_all_fields.py  unnest_field.py  with_fields.py
bigquery_frame/transformations_impl/: analyze.py  analyze_aggs.py  flatten.py  flatten_schema.py  harmonize_dataframes.py  normalize_arrays.py  pivot_unpivot.py  sort_all_arrays.py  sort_columns.py  transform_all_fields.py  union_dataframes.py
docs/: README.md
docs/css/: custom_width.css  mkdocstrings.css
docs/reference/: bigquery_frame.md  functions.md  graph.md  nested.md  transformations.md
docs/use_cases/: intro.md
examples/: demo.py  pivot.py
examples/data_diff/: country_code_iso.py
tests/: conftest.py  test_bigquery_builder.py  test_column.py  test_dataframe.py  test_dataframe_writer.py  test_functions.py  test_grouped_data.py  test_has_bigquery_client.py  test_transformations.py  test_utils.py
tests/cli/: test_diff.py
tests/data_diff/: test_compare_dataframes_impl.py  test_dataframe_comparator.py
tests/graph_impl/: test_connected_components.py
tests/nested_impl/: test_package.py  test_unnest_all_fields.py  test_with_fields.py
tests/transformations/: test_pivot_unpivot.py
tests/transformations_impl/: test_analyze.py  test_pivot_unpivot.py  test_transform_all_fields.py  test_union_dataframes.py
