[tool.poetry]
name = "bigquery-frame"
version = "0.2.11"
description = "A DataFrame API for Google BigQuery"
authors = ["FurcyPin"]
license = "Apache-2.0"
keywords = ["BigQuery", "DataFrame"]
readme = "README.md"
homepage = "https://github.com/FurcyPin/bigquery-frame"
repository = "https://github.com/FurcyPin/bigquery-frame"

[tool.poetry.dependencies]
google-cloud-bigquery = ">=2.31.0"
tabulate = ">=0.8.9"
tqdm = ">=4.0.0"
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
coverage = "6.2"
nose2 = "0.10.0"
pipdeptree = "2.2.1"
pandas = ">=1.1.5"
pyarrow = "6.0.1"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
